# chaz_backend

./: .gitignore  Cargo.toml  README.md
migrations/2022-03-18-154235_create_scores/: down.sql  up.sql
src/: main.rs
src/database/: mod.rs  models.rs  schema.rs
src/database/models/: mod.rs  score.rs
