[package]
name = "chaz_backend"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Chagas Jardim <luizchagasjardim@gmail.com", "Jorge Pinto Sousa (he/him/his) <jorge.pinto.sousa@protonmail.ch>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"