[package]
name = "chaz_backend"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Chagas Jardim <luizchagasjardim@gmail.com", "Jorge Pinto Sousa (he/him/his) <jorge.pinto.sousa@protonmail.ch>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = "1.0.136"
serde_derive = "1.0.136"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_sqlite_pool"]